ui/css/itcss/components/newui-sections.scss
$sub-mid-size-breakpoint: 667px;
$sub-mid-size-breakpoint-range: "screen and (min-width: #{$break-large}) and (max-width: #{$sub-mid-size-breakpoint})";

/*
  NewUI Container Elements
 */

.app {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-x: hidden;
  position: relative;
  align-items: center;
}

// Fix for UI lag on external monitor: https://github.com/MetaMask/metamask-extension/issues/10173
.app.os-mac.browser-chrome::after {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 1px;
  height: 1px;
  background-color: var(--Grey-000);
  animation: emptySpinningDiv 1s infinite linear;
}

@keyframes emptySpinningDiv {
  0% { transform: rotate(0deg); }
  to { transform: rotate(1turn); }
}

// Main container
.main-container {
  z-index: $main-container-z-index;
}

.main-container::-webkit-scrollbar {
  display: none;
}

.main-container-wrapper {
  display: flex;
  justify-content: center;
  flex: 1 0 auto;
  min-height: 0;
  width: 100%;
}

// main-container media queries

@media screen and (min-width: $break-large) {
  .lap-visible {
    display: flex;
  }

  .phone-visible {
    display: none;
  }

  .main-container {
    width: 85vw;
    margin-bottom: 10vh;
    min-height: 90vh;
    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
  }
}

@media screen and (min-width: 769px) {
  .main-container {
    width: 80vw;
    min-height: 82vh;
    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
  }
}

@media screen and (min-width: 1281px) {
  .main-container {
    width: 62vw;
    min-height: 82vh;
    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.08);
  }
}

@media screen and (max-width: $break-small) {
  .lap-visible {
    display: none;
  }

  .phone-visible {
    display: flex;
  }

  .main-container {
    width: 100%;
    overflow-y: auto;
    background-color: var(--white);
  }

  .main-container-wrapper {
    flex: 1;
  }
}

.fiat-amount {
  text-transform: uppercase;
}

.token-balance__amount {
  padding: 0 6px;
}

// first time
.first-view-main {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;

  @media screen and (max-width: $break-small) {
    height: 100%;
  }

  @media screen and (min-width: $break-large) {
    width: 85vw;
  }

  @media screen and (min-width: 769px) {
    width: 80vw;
  }

  @media screen and (min-width: 1281px) {
    width: 62vw;
  }
}

.unlock-screen-container {
  z-index: $main-container-z-index;
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1 0 auto;
  background: #f7f7f7;
  width: 100%;
}

.unlock-screen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex: 1 0 auto;
}

.first-view-main-wrapper {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  padding: 0 10px;
  background: white;
}

